[project]
name = "comfyui-hunyuanvideowrapper"
description = "ComfyUI diffusers wrapper nodes for [a/HunyuanVideo](https://github.com/Tencent/HunyuanVideo)"
version = "1.0.1"
license = {file = "LICENSE"}
dependencies = ["accelerate >= 1.2.1", "diffusers >= 0.31.0", "transformers >= 4.47.0", "jax >= 0.4.28"]

[project.urls]
Repository = "https://github.com/kijai/ComfyUI-HunyuanVideoWrapper"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "kijai"
DisplayName = "ComfyUI-HunyuanVideoWrapper"
Icon = ""

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = [ "ComfyUI_HunyuanVideoWrapper_nodes", "ComfyUI_HunyuanVideoWrapper_nodes.hyvideo","ComfyUI_HunyuanVideoWrapper_nodes.enhance_a_video"]
package-dir = { "ComfyUI_HunyuanVideoWrapper_nodes" = ".", "ComfyUI_HunyuanVideoWrapper_nodes.hyvideo" = "hyvideo", "ComfyUI_HunyuanVideoWrapper_nodes.enhance_a_video" = "enhance_a_video"}

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[project.entry-points."comfyui.custom_nodes"]
ComfyUI_HunyuanVideoWrapper_nodes = "ComfyUI_HunyuanVideoWrapper_nodes"